2020-09-23 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_netlist.c: Rename nl_current -> nl_iter in s_netlist_find_object
      and add function documentation.

2020-06-12 Wiley E. Hill <wileyhill@gmail.com>

    * docs/gnetlist.1.in: Add gnetlist(5) to SEE ALSO section.

    * docs/gnetlist.5.in: Fix spelling and add examples.

2020-01-04 Wiley E. Hill <wileyhill@gmail.com>

    * po/nl.po: Update Dutch translations.
    * po/ru.po: Update Russian translations.

2019-12-26 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_netlist.c: Revise s_netlist_add eliminate separate returns.

2019-12-26 Wiley E. Hill <wileyhill@gmail.com>

    * docs/gnetlist.1.in: Update man page; document command-line option "r".

    * src/gnetlist.c: Remove message output to strerr in main_prog.

    * src/parsecmd.c: Add command-line option "r" to allow users the option of
	  specifying the name of the rc file.

2019-12-25 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_traverse.c: Wrap callgrind.h> in conditional  PERFORMANCE directive.

2019-09-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/g_netlist.c: Eliminate unnecessary initialization of name value
      targets in g_graphical_objs_in_net_with_attrib_get_attrib.

    * src/g_register.c: Add structure documentation for gnetlist_funcs.

2019-08-29 Wiley E. Hill <wileyhill@gmail.com>

    * src/g_netlist.c: Revise g_graphical_objs_in_net_with_attrib_get_attrib;
      add pointer to wanted_value to ensure attrib_value is released properly,
      add parameter documentation.

2019-08-28 Wiley E. Hill <wileyhill@gmail.com>

    * src/g_netlist.c: Revise g_get_input_files to return the list of pages
      in the toplevel rather than using global input_files list.

    * gnetlist/src/gnetlist.c: Revise main to check for pages in the top level
      rather than checking input_files list.

    * src/globals.c: Remove global input_files GSList.

    * src/s_netlist.c: Revise s_netlist_return_head to eliminate unnecessary